syntax="proto3";
package user;
option go_package="../user/pb";

message User{
  int64 id=1;
  string name=2;
  int64 follow_count=3;
  int64 follower_count=4;
  bool is_follow=5;
  int64 total_favorited=6;
  int64 favorite_count=7;
  int64 work_count=8;
}
//message Response{
//  int32 status_code=1;
//  string status_msg=2;
//}
message UserLoginOrRegisterRequest{
  string name=1;
  string password=2;
}
message UserLoginOrRegisterResponse{
  int32 status_code=1;
  string status_msg=2;
  int64 user_id=3;
  string token=4;
}
message UserInfoRequest{
  int64 user_id=1;
  int64 to_user_id=2;
  string token=3;
}
message UserInfoResponse{
  int32 status_code=1;
  string status_msg=2;
  User user=3;
}
service UserService{
  rpc UserLogin(UserLoginOrRegisterRequest) returns (UserLoginOrRegisterResponse){}
  rpc UserRegister(UserLoginOrRegisterRequest) returns (UserLoginOrRegisterResponse){}
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse){}
}